# textual-video

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
examples/: main.py
textual_video/: __init__.py  controls.py  core.py  enums.py  metadata.py  player.py  utils.py
