[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textual-video"
version = "0.1.0"
description = "Video playback widgets & controls for Textual (textual-image based)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av==16.1.0",
    "textual>=8.0.0",
    "textual-image>=0.8.5",
    "textual-canvas>=1.1.0"
]
